<resources>
    <string name="app_name">LibMaNa</string>
    <string name="bo_qua">Bỏ qua</string>
    <string name="dang_nhap_he_thong">ĐĂNG NHẬP HỆ THỐNG</string>
    <string name="ten_dang_nhap">Tên đăng nhập</string>
    <string name="mat_khau">Mật khẩu</string>
    <string name="nh_mat_khau">Nhớ mật khẩu</string>
    <string name="dang_nhap">ĐĂNG NHẬP</string>
    <string name="hoac_dang_nhap">Hoặc đăng nhập</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">libmana.com.vn</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Trang chủ</string>
    <string name="menu_phieumuon">Quản lý phiếu mượn</string>
    <string name="menu_loaisach">Quản lý loại sách</string>
    <string name="menu_sach">Quản lý sách</string>
    <string name="menu_thanhvien">Quản lý thành viên</string>
    <string name="menu_top10">Top 10 sách</string>
    <string name="menu_doanhthu">Doanh thu</string>
    <string name="menu_doimk">Đổi mật khẩu</string>
    <string name="menu_dangxuat">Đăng xuất</string>
    <string name="vaiTro">(ThuThu)</string>
    <string name="thong_ke">Thống kê</string>
    <string name="nguoi_dung">Người dùng</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tro_ve">Trở về</string>
    <string name="mat_khau_moi">Mật khẩu mới</string>
    <string name="nhap_lai_mk">Nhập lại mật khẩu</string>
    <string name="mat_khau_cu">Mật khẩu cũ</string>
    <string name="quan_ly_thu_thu">Quản lý thủ thư</string>
    <string name="user_name">User name</string>
    <string name="chi_tiet">Chi tiết</string>
    <string name="thong_tin_thu_thu">THÔNG TIN THỦ THƯ</string>
    <string name="ho_va_ten">Họ và tên</string>
    <string name="sua">Sửa</string>
    <string name="xoa">Xoá</string>
    <string name="them_thu_thu">thêm thủ thư</string>
    <string name="them_moi">Thêm</string>
    <string name="cap_nhat_thu_thu">Cập nhật thủ thư</string>
    <string name="tu_ngay">Ngày bắt đầu</string>
    <string name="den_ngay">Ngày kết thúc</string>
    <string name="tin_doanh_thu">Tính doanh thu</string>
    <string name="tinh_doanh_thu">TÍNH TOÁN DOANH THU</string>
    <string name="them_thanh_vien">Thêm thành viên</string>
    <string name="nam_sinh">Năm sinh</string>
    <string name="ma_thanh_vien">Mã thành viên</string>
    <string name="thong_tin_thanh_vien">Thông tin thành viên</string>
    <string name="cap_nhat_thanh_vien">Cập nhật thành viên</string>
    <string name="ten_loai">Tên loại sách</string>
    <string name="them_loai_sach">Thêm loại sách</string>
    <string name="cap_nhat_loai_sach">Cập nhật loại sách</string>
    <string name="ten_sach">Tên sách</string>
    <string name="tien_thue">Giá thuê</string>
    <string name="m_s_ch">Mã sách</string>
    <string name="ti_n_thu">Tiền thuê</string>
    <string name="ma_loai">Mã loại sách</string>
    <string name="thong_tin_sach">THÔNG TIN SÁCH</string>
    <string name="ten_loai_sach">Tên loại sách</string>
    <string name="cap_nhat_sach">Cập nhật sách</string>
    <string name="ma_sach">Mã sách</string>
    <string name="thong_tin_phieu_muon">Thông tin phiếu mượn</string>
    <string name="ma_phieu_muon">Mã phiếu mượn</string>
    <string name="ten_thu_thu">Tên thủ thư</string>
    <string name="ten_thanh_vien">Tên thành viên</string>
    <string name="t_n_s_ch">Tên sách</string>
    <string name="ngay_muon">Ngày mượn</string>
    <string name="chu_tra">Chưa trả</string>
    <string name="them_sach">Thêm sách</string>
    <string name="thưm_phieu_muon">Thêm phiếu mượn</string>
    <string name="them_phieu_muon">Thêm Phiếu mượn</string>
    <string name="trang_thai">Trạng thái</string>
    <string name="da_tra">Đã trả</string>
    <string name="cap_nhat_phieu_muon">Cập nhật phiếu mượn</string>

</resources>