<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_phieu_muon">
    <fragment
        android:id="@+id/nav_home"
        android:name="fpt.edu.projectlibmanna.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />
    <activity
        android:id="@+id/nav_dangxuat"
        android:name="fpt.edu.projectlibmanna.ui.login.LoginActivity"
        android:label="activity_login"
        tools:layout="@layout/activity_login" />
    <fragment
        android:id="@+id/nav_ql_thu_thu"
        android:name="fpt.edu.projectlibmanna.ui.thuthu.QuanLyThuThuFragment"
        android:label="@string/quan_ly_thu_thu"
        tools:layout="@layout/fragment_quan_ly_thu_thu" />
    <fragment
        android:id="@+id/nav_top10"
        android:name="fpt.edu.projectlibmanna.ui.top10sach.Top10Fragment"
        android:label="@string/menu_top10"
        tools:layout="@layout/fragment_top10" />
    <fragment
        android:id="@+id/nav_doanh_thu"
        android:name="fpt.edu.projectlibmanna.ui.doanhthu.DoanhThuFragment"
        android:label="@string/menu_doanhthu"
        tools:layout="@layout/fragment_doanh_thu" />
    <fragment
        android:id="@+id/nav_thanh_vien"
        android:name="fpt.edu.projectlibmanna.ui.thanhvien.ThanhVienFragment"
        android:label="@string/menu_thanhvien"
        tools:layout="@layout/fragment_thanh_vien" />
    <fragment
        android:id="@+id/nav_loai_sach"
        android:name="fpt.edu.projectlibmanna.ui.loaisach.LoaiSachFragment"
        android:label="@string/menu_loaisach"
        tools:layout="@layout/fragment_loai_sach" />
    <fragment
        android:id="@+id/nav_sach"
        android:name="fpt.edu.projectlibmanna.ui.sach.SachFragment"
        android:label="@string/menu_sach"
        tools:layout="@layout/fragment_sach" />
    <fragment
        android:id="@+id/nav_phieu_muon"
        android:name="fpt.edu.projectlibmanna.ui.phieumuon.PhieuMuonFragment"
        android:label="@string/menu_phieumuon"
        tools:layout="@layout/fragment_phieu_muon" />

</navigation>