<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bgr_dialog_rd5_white"
    android:orientation="vertical"
    android:paddingStart="16dp"
    android:paddingTop="16dp"
    android:paddingEnd="16dp">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bgr_dialog_rd5_white"
        android:fontFamily="@font/inter_bold"
        android:gravity="center"
        android:text="@string/them_thu_thu"
        android:textAllCaps="true"
        android:textColor="@color/textColor"
        android:textSize="17sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilUserName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            app:boxStrokeColor="@color/ColorTeal"
            app:hintTextColor="@color/ColorTeal">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_user_teal_24"
                android:drawablePadding="8dp"
                android:fontFamily="@font/inter_regular"
                android:hint="@string/ten_dang_nhap"
                android:inputType="textPersonName" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilFullName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            app:boxStrokeColor="@color/ColorTeal"
            app:hintTextColor="@color/ColorTeal">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_contacts_teall"
                android:drawablePadding="8dp"
                android:fontFamily="@font/inter_regular"
                android:hint="@string/ho_va_ten"
                android:inputType="textPersonName" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilUserPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            app:boxStrokeColor="@color/ColorTeal"
            app:hintTextColor="@color/ColorTeal"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_passowrd_teal_24"
                android:drawablePadding="8dp"
                android:fontFamily="@font/inter_regular"
                android:hint="@string/mat_khau"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/bgr_btn_rd5_teal"
        android:fontFamily="@font/inter_bold"
        android:text="@string/them_moi"
        android:textColor="@color/white"
        android:textSize="15sp" />

    <Button
        android:id="@+id/btnBack"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_regular"
        android:padding="16dp"
        android:text="Trở về màng hình chính"
        android:textAllCaps="false"
        android:textColor="@color/red"
        android:textSize="15sp"
        tools:ignore="HardcodedText" />
</LinearLayout>